prevent sort button from wrapping up

--- a/frontend/src/pages/Dashboard/index.css
+++ b/frontend/src/pages/Dashboard/index.css
@@ -28,6 +28,7 @@
   text-decoration: underline;
   margin-left: 6px;
   user-select: none;
+  white-space: nowrap;
 }
 
 .sortByMenu {
